--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baap er Bank</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
     <header>
-        <h1>Welcome to My baap er Bank </h1>
+        <h1 class="text-5xl text-center mt-16">Welcome to My <span class="font-semibold text-purple-600"> Baap er
+                Bank</span>!!! </h1>
     </header>
 
 </body>
