--- a/banking.html
+++ b/banking.html
@@ -20,17 +20,18 @@
     <main class="mx-auto w-3/4 ">
         <!-- Balance and Transaction -->
         <section class="mt-8">
+            <!-- Deposit----------------- -->
             <div class="grid grid-cols-3 gap-4  text-white">
                 <div class="bg-blue-300 p-8 rounded">
                     <h3 class="text-3xl"> Deposit </h3>
-                    <h4 class="text-4xl">$000 </h4>
-
+                    <h4 class="text-4xl">$<span id="deposit-total">000</span> </h4>
                 </div>
+                <!-- Withdraw ------------------------ -->
                 <div class="bg-green-300 p-8 rounded">
                     <h3 class="text-3xl"> Withdraw </h3>
                     <h4 class="text-4xl">$000 </h4>
-
                 </div>
+                <!-- Balance ------------------------------>
                 <div class="bg-yellow-300 p-8 rounded">
                     <h3 class="text-3xl">Balance </h3>
                     <h4 class="text-4xl">$1240 </h4>
