--- a/banking.html
+++ b/banking.html
@@ -24,17 +24,17 @@
             <div class="grid grid-cols-3 gap-4  text-white">
                 <div class="bg-blue-300 p-8 rounded">
                     <h3 class="text-3xl"> Deposit </h3>
-                    <h4 class="text-4xl">$<span id="deposit-total">000</span> </h4>
+                    <h4 class="text-4xl">$<span id="deposit-total">00</span> </h4>
                 </div>
                 <!-- Withdraw ------------------------ -->
                 <div class="bg-green-300 p-8 rounded">
                     <h3 class="text-3xl"> Withdraw </h3>
-                    <h4 class="text-4xl">$000 </h4>
+                    <h4 class="text-4xl">$<span id="withdraw-total">00</span></h4>
                 </div>
                 <!-- Balance ------------------------------>
                 <div class="bg-yellow-300 p-8 rounded">
                     <h3 class="text-3xl">Balance </h3>
-                    <h4 class="text-4xl">$1240 </h4>
+                    <h4 class="text-4xl">$<span id="balance-total">1240</span> </h4>
                 </div>
 
             </div>
@@ -43,6 +43,7 @@
         <!-- deposit and Withdraw -->
         <section class="mt-8">
             <div class="grid grid-cols-2 gap-4">
+                <!------------------------------------------- deposit ---------------->
                 <div class="bg-red-100 p-8 rounded">
                     <h3 class="text-2xl">Please Deposit </h3>
                     <div>
@@ -54,6 +55,7 @@
                             Deposit</button>
                     </div>
                 </div>
+                <!------------------------------------------- withdraw ----------------->
                 <div class="bg-purple-100 p-8 rounded">
                     <h3 class="text-2xl">Please Withdraw </h3>
                     <div>
